samples/_failures_safe/1761641119_265023_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0908c72b.c: In function ‘main’:
./samples/SAFE/__tmp_0908c72b.c:149:9: error: expected declaration or statement at end of input
  149 |         int add_result = add_matrices(&mat_a, &mat_b, &result);
      |         ^~~
./samples/SAFE/__tmp_0908c72b.c:149:9: error: expected declaration or statement at end of input
